<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    android:paddingStart="20dp"
    android:paddingTop="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="20dp"
    tools:context=".GradesActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_white"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="12dp"
        android:paddingTop="10dp"
        android:paddingEnd="12dp"
        android:paddingBottom="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@color/background_white"
            android:src="@drawable/ic_baseline_menu_book_48" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="30dp"
            android:text="@string/number_of_grades"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/AutoTextGradeForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp">

                <AutoCompleteTextView
                    android:id="@+id/auto_number_grades"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:textAlignment="center" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_number_grades"
                style="@style/ButtonGrades"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm" />
        </LinearLayout>

        <EditText
            android:id="@+id/txt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="12dp"
            android:inputType="text"
            android:maxLength="24"
            android:hint="Digite o nome do aluno(a)" />

        <EditText
            android:id="@+id/grade1"
            style="@style/EditTextGrades"
            android:hint="Digite a nota do primeiro bimestre" />

        <EditText
            android:id="@+id/grade2"
            style="@style/EditTextGrades"
            android:hint="Digite a nota do segundo bimestre" />

        <EditText
            android:id="@+id/grade3"
            style="@style/EditTextGrades"
            android:hint="Digite a nota do terceiro bimestre"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/grade4"
            style="@style/EditTextGrades"
            android:hint="Digite a nota do quarto bimestre"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btn_calc_grade"
            style="@style/ButtonGrades"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/calculate" />

    </LinearLayout>

</ScrollView>